test/Fail/LocalRewriteConstraint.err
LocalRewriteConstraint.agda:14,17-18: error: [UnequalTerms]
zero != p of type Nat
when checking that the expression p has type 0 ≡ x
